font size issue fix on mobile view

--- a/index.css
+++ b/index.css
@@ -272,7 +272,7 @@ nav {
   
 @media (max-width: 767.98px) {
     .custom-navlink {
-        font-size: 11px;
+        font-size: 10px;
     }
 }
 
